[gd_scene load_steps=2 format=3 uid="uid://ckekdxfypaj58"]

[ext_resource type="Script" path="res://Asteroids/Asteroid.gd" id="1_ytwvs"]

[node name="Asteroid" type="Area2D" groups=["Asteroid"]]
script = ExtResource("1_ytwvs")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="." groups=["Timer"]]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
